--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-/env
-/vendor
 /node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+sftp-config.json
